--- a/src/pages/totaalstand-details/totaalstand-details.html
+++ b/src/pages/totaalstand-details/totaalstand-details.html
@@ -22,134 +22,134 @@
 <ion-content>
   <ion-card>
     <ion-item color="primary">
-      <ion-row>
-        <ion-col width-20>Club</ion-col>
-        <ion-col width-50>Naam
+      <ion-row class="header">
+        <ion-col class="club">Club</ion-col>
+        <ion-col class="naam">Naam
         </ion-col>
-        <ion-col width-30>Totaal</ion-col>
+        <ion-col class="punten">Totaal</ion-col>
       </ion-row>
     </ion-item>
     <ion-item text-wrap *ngFor="let line of totaalstandregel.TeamScores | orderBy : ['-RoundId','Id'] | take : 11" (click)="toggleDetails(line)">
       <ion-icon *ngIf="!line.showDetails" color="secondary" item-right name="ios-add-circle-outline"></ion-icon>
       <ion-icon *ngIf="line.showDetails" color="secondary" item-right name="ios-remove-circle-outline"></ion-icon>
       <ion-row>
-        <ion-col width-20>
+        <ion-col class="club">
           <img class="clubicon" [src]="'assets/clubicons/'+ line.Team + '.png'">
         </ion-col>
-        <ion-col width-60>{{line.Name}}
+        <ion-col class="naam">{{line.Name}}
           <span ion-text color="light">({{line.Position}})</span>
           <ion-icon *ngIf="line.Captain" color="secondary" name="md-star"></ion-icon>
         </ion-col>
-        <ion-col width-20>{{line.TotalScore}}
+        <ion-col class="punten">{{line.TotalScore}}
 
         </ion-col>
 
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.Played != 0">
-        <ion-col width-20></ion-col>
-        <ion-col>Gespeeld</ion-col>
-        <ion-col width-20> {{line.Played}}</ion-col>
+        <ion-col class="club"></ion-col>
+        <ion-col class="name">Gespeeld</ion-col>
+        <ion-col class="punten"> {{line.Played}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.Won != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Gewonnen</ion-col>
-        <ion-col width-20> {{line.Won}}</ion-col>
+        <ion-col class="punten"> {{line.Won}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.Draw != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Gelijk</ion-col>
-        <ion-col width-20> {{line.Draw}}</ion-col>
+        <ion-col class="punten"> {{line.Draw}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.CleanSheetScore != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>De nul</ion-col>
-        <ion-col width-20> {{line.CleanSheetScore}}</ion-col>
+        <ion-col class="punten"> {{line.CleanSheetScore}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.Assist != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Assist</ion-col>
-        <ion-col width-20> {{line.Assist}}</ion-col>
+        <ion-col class="punten"> {{line.Assist}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.Goals != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Doelpunten</ion-col>
-        <ion-col width-20> {{line.Goals}}</ion-col>
+        <ion-col class="punten"> {{line.Goals}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.OwnGoals != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Eigen goal</ion-col>
-        <ion-col width-20> {{line.OwnGoals}}</ion-col>
+        <ion-col class="punten"> {{line.OwnGoals}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.YellowCard != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Geel</ion-col>
-        <ion-col width-20> {{line.YellowCard}}</ion-col>
+        <ion-col class="punten"> {{line.YellowCard}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.RedCard != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Rood</ion-col>
-        <ion-col width-20> {{line.RedCard}}</ion-col>
+        <ion-col class="punten"> {{line.RedCard}}</ion-col>
       </ion-row>
     </ion-item>
      <ion-item  text-wrap *ngFor="let line of totaalstandregel.TeamScores | orderBy : ['RoundId','Id'] | take : totaalstandregel.TeamScores.length - 11" (click)="toggleDetails(line)">
       <ion-icon *ngIf="!line.showDetails" color="light" item-right name="ios-add-circle-outline"></ion-icon>
       <ion-icon *ngIf="line.showDetails" color="light" item-right name="ios-remove-circle-outline"></ion-icon>
       <ion-row>
-        <ion-col width-20>
+        <ion-col class="club">
           <img class="clubicon wisselspelersIcon" [src]="'assets/clubicons/'+ line.Team + '.png'">
         </ion-col>
-        <ion-col width-60><span ion-text color="light">{{line.Name}}</span>
+        <ion-col class="naam"><span ion-text color="light">{{line.Name}}</span>
           <span ion-text color="light">({{line.Position}})</span>
         </ion-col>
-        <ion-col width-20 color="light"><span ion-text color="light">{{line.TotalScore}}</span>
+        <ion-col class="punten" color="light"><span ion-text color="light">{{line.TotalScore}}</span>
 
         </ion-col>
 
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.Played != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Gespeeld</ion-col>
-        <ion-col width-20> {{line.Played}}</ion-col>
+        <ion-col class="punten"> {{line.Played}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.Won != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Gewonnen</ion-col>
-        <ion-col width-20> {{line.Won}}</ion-col>
+        <ion-col class="punten"> {{line.Won}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.Draw != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Gelijk</ion-col>
-        <ion-col width-20> {{line.Draw}}</ion-col>
+        <ion-col class="punten"> {{line.Draw}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.CleanSheetScore != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>De nul</ion-col>
-        <ion-col width-20> {{line.CleanSheetScore}}</ion-col>
+        <ion-col class="punten"> {{line.CleanSheetScore}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.Assist != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Assist</ion-col>
-        <ion-col width-20> {{line.Assist}}</ion-col>
+        <ion-col class="punten"> {{line.Assist}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.Goals != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Doelpunten</ion-col>
-        <ion-col width-20> {{line.Goals}}</ion-col>
+        <ion-col class="punten"> {{line.Goals}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.OwnGoals != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Eigen goal</ion-col>
-        <ion-col width-20> {{line.OwnGoals}}</ion-col>
+        <ion-col class="punten"> {{line.OwnGoals}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.YellowCard != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Geel</ion-col>
-        <ion-col width-20> {{line.YellowCard}}</ion-col>
+        <ion-col class="punten"> {{line.YellowCard}}</ion-col>
       </ion-row>
       <ion-row ion-text color="light" *ngIf="line.showDetails && line.RedCard != 0">
-        <ion-col width-20></ion-col>
+        <ion-col class="club"></ion-col>
         <ion-col>Rood</ion-col>
-        <ion-col width-20> {{line.RedCard}}</ion-col>
+        <ion-col class="punten"> {{line.RedCard}}</ion-col>
       </ion-row>
     </ion-item>
 
