--- a/src/pages/wedstrijdenstand/wedstrijdenstand.html
+++ b/src/pages/wedstrijdenstand/wedstrijdenstand.html
@@ -22,23 +22,23 @@
 
   <ion-card *ngIf="wedstrijdenstand">
     <ion-item color="secondary">
-      <ion-row>
-        <ion-col width-20>Pos.</ion-col>
-        <ion-col width-50>Naam</ion-col>
-        <ion-col width-30>Punten</ion-col>
+      <ion-row class="header">
+        <ion-col class="positie">Pos.</ion-col>
+        <ion-col>Naam</ion-col>
+        <ion-col class="punten">Punten</ion-col>
       </ion-row>
     </ion-item>
     <ion-item color="white" text-wrap *ngFor="let line of wedstrijdenstand; let positie = index" (click)="goToDetails(line)">
       <ion-icon color="secondary" item-right name="ios-arrow-dropright-outline"></ion-icon>
       <ion-row>
-        <ion-col width-20 *ngIf="line?.TotalMatchesScore !== wedstrijdenstand[positie-1]?.TotalMatchesScore">
+        <ion-col class="positie" *ngIf="line?.TotalMatchesScore !== wedstrijdenstand[positie-1]?.TotalMatchesScore">
           {{positie + 1}}
         </ion-col>
-        <ion-col width-20 *ngIf="line?.TotalMatchesScore === wedstrijdenstand[positie-1]?.TotalMatchesScore">
+        <ion-col class="positie" *ngIf="line?.TotalMatchesScore === wedstrijdenstand[positie-1]?.TotalMatchesScore">
 
         </ion-col>
-        <ion-col width-60>{{line.Participant.Name}}</ion-col>
-        <ion-col width-20> {{line.TotalMatchesScore}}</ion-col>
+        <ion-col>{{line.Participant.Name}}</ion-col>
+        <ion-col class="punten"> {{line.TotalMatchesScore}}</ion-col>
       </ion-row>
     </ion-item>
   </ion-card>
