Voorspellingen kunnen bekeken worden in de app

--- a/src/pages/dropdownmenu/dropdownmenu.html
+++ b/src/pages/dropdownmenu/dropdownmenu.html
@@ -29,4 +29,10 @@
 
     Vragenstand
   </ion-item>
+  <ion-item (click)="openDeelnemers()">
+    <ion-icon color="secondary" name="people" item-left></ion-icon>
+    <ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>
+
+    Deelnemers
+  </ion-item>
 </ion-list>
