--- a/src/pages/teamstand-details/teamstand-details.html
+++ b/src/pages/teamstand-details/teamstand-details.html
@@ -4,7 +4,7 @@
     <img height="74px" [src]="'assets/icon/logo_white.png'">
   </ion-navbar>
 
-  <ion-item text-wrap color="secondary">
+  <ion-item text-wrap color="primary">
     {{teamstandregel.Participant.Name}} heeft {{teamstandregel.TotalTeamScore}} punten gehaald.
   </ion-item>
 
@@ -13,7 +13,7 @@
 <ion-content>
 
   <ion-card>
-    <ion-item color="primary">
+    <ion-item color="secondary">
       <ion-row class="header">
         <ion-col class="club">Club</ion-col>
         <ion-col class="item-text-wrap">Naam</ion-col>
