--- a/src/pages/totaalstand-details/totaalstand-details.html
+++ b/src/pages/totaalstand-details/totaalstand-details.html
@@ -9,7 +9,7 @@
   </ion-navbar>
   <ion-row>
 
-  <ion-item text-wrap color="secondary">
+  <ion-item text-wrap color="primary">
     {{totaalstandregel.Name}} staat {{totaalstandregel.Positie}}e met {{totaalstandregel.TotalScore}} punten <br>
     <h5>Team: {{totaalstandregel.TotalTeamScore}} -
       Wedstrijden: {{totaalstandregel.TotalMatchesScore}} -
@@ -21,7 +21,7 @@
 
 <ion-content>
   <ion-card>
-    <ion-item color="primary">
+    <ion-item color="secondary">
       <ion-row class="header">
         <ion-col class="club">Club</ion-col>
         <ion-col class="naam">Naam
