--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,5 @@
 <ion-header>
-  <ion-navbar class="mynavbar" ion-text color="white">
-    <img height="74px" [src]="'assets/icon/logo_white.png'">
-    <ion-buttons end>
-      <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
-        <ion-icon name="menu"></ion-icon>
-      </button>
-    </ion-buttons>
-  </ion-navbar>
+  <supereleven-navbar></supereleven-navbar>
 </ion-header>
 
 <ion-content>
