--- a/src/pages/prediction/prediction.html
+++ b/src/pages/prediction/prediction.html
@@ -1,8 +1,6 @@
 <ion-header>
 
-  <ion-navbar class="mynavbar" ion-text color="white">
-    <img height="74px" [src]="'assets/icon/logo_white.png'">
-  </ion-navbar>
+  <supereleven-navbar></supereleven-navbar>
 
   <ion-item text-wrap color="secondary">
     Voorspellingen van {{voorspelling?.Participant.Name}}
