--- a/src/pages/teamstand-details/teamstand-details.html
+++ b/src/pages/teamstand-details/teamstand-details.html
@@ -1,9 +1,6 @@
 <ion-header>
 
-  <ion-navbar class="mynavbar" ion-text color="white">
-    <img height="74px" [src]="'assets/icon/logo_white.png'">
-  </ion-navbar>
-
+  <supereleven-navbar></supereleven-navbar>
   <ion-item text-wrap color="primary">
     {{teamstandregel.Participant.Name}} heeft {{teamstandregel.TotalTeamScore}} punten gehaald.
   </ion-item>
