--- a/src/pages/totaalstand-details/totaalstand-details.html
+++ b/src/pages/totaalstand-details/totaalstand-details.html
@@ -1,12 +1,6 @@
 <ion-header>
-  <ion-navbar class="mynavbar" ion-text color="white">
-    <img height="74px" [src]="'assets/icon/logo_white.png'">
-    <!--<ion-buttons end>-->
-      <!--<button color="secondary" ion-button icon-only>-->
-        <!--<ion-icon name="menu"></ion-icon>-->
-      <!--</button>-->
-    <!--</ion-buttons>-->
-  </ion-navbar>
+  <supereleven-navbar></supereleven-navbar>
+
   <ion-row>
 
   <ion-item text-wrap color="primary">
