--- a/src/pages/wedstrijdenstand-details/wedstrijdenstand-details.html
+++ b/src/pages/wedstrijdenstand-details/wedstrijdenstand-details.html
@@ -1,17 +1,11 @@
 <ion-header>
-
-  <ion-navbar class="mynavbar" ion-text color="white">
-    <img height="74px" [src]="'assets/icon/logo_white.png'">
-  </ion-navbar>
-
+  <supereleven-navbar></supereleven-navbar>
   <ion-item text-wrap color="secondary">
     {{wedstrijdenstandRegel.Participant.Name}} heeft {{wedstrijdenstandRegel.TotalMatchesScore}} punten gehaald.
   </ion-item>
-
 </ion-header>
 
 <ion-content>
-
   <ion-card>
     <ion-item no-border color="primary">
       <ion-row>
