--- a/src/pages/spelerstatistieken/spelerstatistieken.html
+++ b/src/pages/spelerstatistieken/spelerstatistieken.html
@@ -3,12 +3,12 @@
   <supereleven-navbar></supereleven-navbar>
 
   <ion-item text-wrap color="primary">
-    <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+    <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()"></ion-searchbar>
   </ion-item>
 
 </ion-header>
 <ion-content>
-
+    <ion-spinner *ngIf="searching"></ion-spinner>
   <ion-card>
     <ion-item color="secondary">
       <ion-row class="header">
