--- a/src/pages/teamstand/teamstand.html
+++ b/src/pages/teamstand/teamstand.html
@@ -8,7 +8,7 @@
     </ion-select>
   </ion-item>
     <ion-item text-wrap color="primary">
-  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+      <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()"></ion-searchbar>
     </ion-item>
 </ion-header>
 
