search implementation placeholders

--- a/src/pages/spelerstatistieken/spelerstatistieken.html
+++ b/src/pages/spelerstatistieken/spelerstatistieken.html
@@ -3,7 +3,7 @@
   <supereleven-navbar></supereleven-navbar>
 
   <ion-item text-wrap color="primary">
-    <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()"></ion-searchbar>
+    <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()" placeholder="zoek op speler of club"></ion-searchbar>
   </ion-item>
 
 </ion-header>
