--- a/src/pages/dropdownmenu/dropdownmenu.html
+++ b/src/pages/dropdownmenu/dropdownmenu.html
@@ -38,4 +38,10 @@
     <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Gekozen spelers
   </button>
+
+  <button ion-item (click)="openSpelerscore()">
+    <ion-icon color="secondary" name="pie" item-left></ion-icon>
+    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
+    Spelers score
+  </button>
 </ion-list>
