--- a/src/pages/spelerstatistieken/spelerstatistieken.html
+++ b/src/pages/spelerstatistieken/spelerstatistieken.html
@@ -2,10 +2,7 @@
 
   <supereleven-navbar></supereleven-navbar>
 
-  <ion-item text-wrap color="primary">
-    <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()"
-    ></ion-searchbar>
-  </ion-item>
+    <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()"></ion-searchbar>
 
 </ion-header>
 <ion-content>
