--- a/src/pages/totaalstand-details/totaalstand-details.html
+++ b/src/pages/totaalstand-details/totaalstand-details.html
@@ -23,7 +23,7 @@
         <ion-col class="punten">Totaal</ion-col>
       </ion-row>
     </ion-item>
-    <ion-item text-wrap *ngFor="let line of totaalstandregel.TeamScores | orderBy : ['-RoundId','Id'] | take : 11" (click)="toggleDetails(line)">
+    <button ion-item detail-none text-wrap *ngFor="let line of totaalstandregel.TeamScores | orderBy : ['-RoundId','Id'] | take : 11" (click)="toggleDetails(line)">
       <ion-icon *ngIf="!line.showDetails" color="secondary" item-right name="ios-add-circle-outline"></ion-icon>
       <ion-icon *ngIf="line.showDetails" color="secondary" item-right name="ios-remove-circle-outline"></ion-icon>
       <ion-row>
@@ -84,8 +84,8 @@
         <ion-col>Rood</ion-col>
         <ion-col class="punten"> {{line.RedCard}}</ion-col>
       </ion-row>
-    </ion-item>
-     <ion-item  text-wrap *ngFor="let line of totaalstandregel.TeamScores | orderBy : ['RoundId','Id'] | take : totaalstandregel.TeamScores.length - 11" (click)="toggleDetails(line)">
+    </button>
+     <button ion-item detail-none text-wrap *ngFor="let line of totaalstandregel.TeamScores | orderBy : ['RoundId','Id'] | take : totaalstandregel.TeamScores.length - 11" (click)="toggleDetails(line)">
       <ion-icon *ngIf="!line.showDetails" color="light" item-right name="ios-add-circle-outline"></ion-icon>
       <ion-icon *ngIf="line.showDetails" color="light" item-right name="ios-remove-circle-outline"></ion-icon>
       <ion-row>
@@ -145,7 +145,6 @@
         <ion-col>Rood</ion-col>
         <ion-col class="punten"> {{line.RedCard}}</ion-col>
       </ion-row>
-    </ion-item>
-
+    </button>
   </ion-card>
 </ion-content>
