Nu ook per ronde ophalen mogelijk voor spelersscore

--- a/src/pages/dropdownmenu/dropdownmenu.html
+++ b/src/pages/dropdownmenu/dropdownmenu.html
@@ -27,6 +27,11 @@
     <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Vragenstand
   </button>
+  <button ion-item (click)="openSpelerscore()">
+    <ion-icon color="secondary" name="shirt" item-left></ion-icon>
+    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
+    Spelers score
+  </button>
   <button ion-item (click)="openDeelnemers()">
     <ion-icon color="secondary" name="people" item-left></ion-icon>
     <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
@@ -39,9 +44,4 @@
     Gekozen spelers
   </button>
 
-  <button ion-item (click)="openSpelerscore()">
-    <ion-icon color="secondary" name="pie" item-left></ion-icon>
-    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
-    Spelers score
-  </button>
 </ion-list>
