Ion affix toegevoegd aan alle headers.

--- a/src/pages/spelers-score/spelers-score.html
+++ b/src/pages/spelers-score/spelers-score.html
@@ -12,10 +12,10 @@
     <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()"></ion-searchbar>
 </ion-header>
 
-<ion-content>
+<ion-content #content>
   <ion-spinner *ngIf="searching"></ion-spinner>
   <ion-card>
-    <ion-item color="secondary">
+    <ion-item ion-affix [content]="content" color="secondary">
       <ion-row class="header">
         <ion-col class="club">Club</ion-col>
         <ion-col class="item-text-wrap">Naam</ion-col>
