--- a/src/pages/teamstand/teamstand.html
+++ b/src/pages/teamstand/teamstand.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content #content>
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
       pullingText="Laatste update {{laatsteupdate?.updatedAt | date:'dd/MM HH:mm'}}"
@@ -22,7 +22,7 @@
   </ion-refresher>
 
   <ion-card *ngIf="teamstand">
-    <ion-item color="secondary">
+    <ion-item ion-affix [content]="content" color="secondary">
       <ion-row class="header">
         <ion-col class="positie">Pos.</ion-col>
         <ion-col>Naam</ion-col>
