--- a/src/pages/deelnemers-per-speler/deelnemers-per-speler.html
+++ b/src/pages/deelnemers-per-speler/deelnemers-per-speler.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content #content>
   <!--<ion-refresher (ionRefresh)="doRefresh($event)">-->
   <!--<ion-refresher-content-->
   <!--pullingText="Laatste update {{laatsteupdate?.updatedAt | date:'dd/MM HH:mm'}}"-->
@@ -20,7 +20,7 @@
   <!--</ion-refresher>-->
 
   <ion-card *ngIf="deelnemersPerSpeler">
-    <ion-item color="secondary">
+    <ion-item ion-affix [content]="content" color="secondary">
       <ion-row>
         <ion-col class="positie">Pos.</ion-col>
         <ion-col>Naam</ion-col>
