--- a/src/pages/deelnemers/deelnemers.html
+++ b/src/pages/deelnemers/deelnemers.html
@@ -3,7 +3,7 @@
   <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()" placeholder="zoek op naam"></ion-searchbar>
 </ion-header>
 
-<ion-content>
+<ion-content #content>
   <!--<ion-refresher (ionRefresh)="doRefresh($event)">-->
     <!--<ion-refresher-content-->
       <!--pullingText="Laatste update {{laatsteupdate?.updatedAt | date:'dd/MM HH:mm'}}"-->
@@ -14,7 +14,7 @@
   <!--</ion-refresher>-->
 
   <ion-card *ngIf="deelnemers">
-    <ion-item color="secondary">
+    <ion-item ion-affix [content]="content" color="secondary">
       <ion-row class="header">
         <ion-col class="positie">#</ion-col>
         <ion-col>Naam</ion-col>
