--- a/src/pages/prediction/prediction.html
+++ b/src/pages/prediction/prediction.html
@@ -8,10 +8,10 @@
 
 </ion-header>
 
-<ion-content>
+<ion-content #content >
 
   <ion-card>
-    <ion-item color="primary">
+    <ion-item ion-affix [content]="content" color="primary">
       <ion-row class="header">
         <ion-col class="club">Club</ion-col>
         <ion-col class="item-text-wrap">Naam</ion-col>
@@ -31,7 +31,7 @@
   </ion-card>
 
   <ion-card>
-    <ion-item color="primary">
+    <ion-item ion-affix [content]="content" color="primary">
       <ion-row class="header">
         <ion-col class="club" class="club">Club</ion-col>
         <ion-col class="item-text-wrap"></ion-col>
@@ -50,7 +50,7 @@
   </ion-card>
 
   <ion-card>
-    <ion-item no-border color="primary">
+    <ion-item ion-affix [content]="content" no-border color="primary">
       <ion-row>
         <ion-col width-80 class="item-text-wrap">Vraag</ion-col>
       </ion-row>
@@ -71,7 +71,7 @@
   </ion-card>
 
   <ion-card>
-    <ion-item no-border color="primary">
+    <ion-item ion-affix [content]="content" no-border color="primary">
       <ion-row>
         <ion-col class="item-text-wrap">Wedstrijd</ion-col>
       </ion-row>
