--- a/src/pages/totaalstand/totaalstand.html
+++ b/src/pages/totaalstand/totaalstand.html
@@ -4,7 +4,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content #content>
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
       pullingText="Laatste update {{laatsteupdate?.updatedAt | date:'dd/MM HH:mm'}}"
@@ -15,7 +15,7 @@
   </ion-refresher>
 
   <ion-card *ngIf="totaalstand">
-        <ion-item color="secondary">
+        <ion-item ion-affix [content]="content" color="secondary">
           <ion-row class="header">
             <ion-col class="positie">Pos.</ion-col>
             <ion-col class="naam">Naam</ion-col>
