--- a/src/pages/vragenstand-details/vragenstand-details.html
+++ b/src/pages/vragenstand-details/vragenstand-details.html
@@ -9,10 +9,10 @@
 
 </ion-header>
 
-<ion-content>
+<ion-content #content>
 
   <ion-card>
-    <ion-item no-border color="primary">
+    <ion-item ion-affix [content]="content" no-border color="primary">
       <ion-row>
         <ion-col width-80 class="item-text-wrap">Vraag</ion-col>
         <ion-col width-20>Punten</ion-col>
