icons + bug fix for spelersscore

--- a/src/pages/supereleven-navbar/supereleven-navbar.html
+++ b/src/pages/supereleven-navbar/supereleven-navbar.html
@@ -1,5 +1,5 @@
 <ion-navbar class="mynavbar superelevennavbar" ion-text color="white">
-  <img height="74px" [src]="'assets/icon/logo_white.png'">
+  <img [src]="'assets/icon/logo_white.png'">
   <ion-buttons end>
     <button color="secondary" ion-button icon-only (click)="presentPopover($event)">
       <ion-icon name="menu"></ion-icon>
