--- a/src/pages/dropdownmenu/dropdownmenu.html
+++ b/src/pages/dropdownmenu/dropdownmenu.html
@@ -1,47 +1,43 @@
 <ion-list no-lines="">
   <button ion-item (click)="openHome()">
     <ion-icon color="secondary" name="home" item-left></ion-icon>
-    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Home
   </button>
 
   <button ion-item (click)="openTotaalstand()">
     <ion-icon color="secondary" name="trophy" item-left></ion-icon>
-    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Totaalstand
   </button >
 
   <button ion-item (click)="openTeamstand()">
     <ion-icon color="secondary" name="stats" item-left></ion-icon>
-    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Teamstand
   </button>
 
   <button ion-item *ngIf='false' (click)="openWedstrijdenstand()">
     <ion-icon color="secondary" name="podium" item-left></ion-icon>
-    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Wedstrijdenstand
   </button>
   <button ion-item *ngIf='false' (click)="openVragenstand()">
     <ion-icon color="secondary" name="stats" item-left></ion-icon>
-    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Vragenstand
   </button>
   <button ion-item (click)="openSpelerscore()">
     <ion-icon color="secondary" name="shirt" item-left></ion-icon>
-    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Spelers score
   </button>
   <button ion-item (click)="openDeelnemers()">
     <ion-icon color="secondary" name="people" item-left></ion-icon>
-    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Deelnemers
   </button>
 
   <button ion-item (click)="openSpelerstatistieken()">
     <ion-icon color="secondary" name="pie" item-left></ion-icon>
-    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Gekozen spelers
+  </button>
+  <button ion-item (click)="logout()">
+    <ion-icon color="secondary" name="log-out" item-left></ion-icon>
+    Uitloggen
   </button>
 
 </ion-list>
