Wedstrijdenstand toegevoegd + positie in standen gefixed.

--- a/src/pages/dropdownmenu/dropdownmenu.html
+++ b/src/pages/dropdownmenu/dropdownmenu.html
@@ -17,11 +17,11 @@
     Teamstand
   </button>
 
-  <button ion-item *ngIf='false' (click)="openWedstrijdenstand()">
+  <button ion-item (click)="openWedstrijdenstand()">
     <ion-icon color="secondary" name="podium" item-left></ion-icon>
-    <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
     Wedstrijdenstand
   </button>
+
   <button ion-item *ngIf='false' (click)="openVragenstand()">
     <ion-icon color="secondary" name="stats" item-left></ion-icon>
     <!--<ion-icon color="secondary" item-right name="ios-arrow-forward-outline"></ion-icon>-->
