--- a/src/pages/teamstand/teamstand.html
+++ b/src/pages/teamstand/teamstand.html
@@ -31,11 +31,8 @@
     </ion-item>
     <button ion-item color="white" text-wrap *ngFor="let line of teamstand; let positie = index" (click)="goToDetails(line)">
       <ion-row>
-        <ion-col class="positie" *ngIf="line?.TotalTeamScore !== teamstand[positie-1]?.TotalTeamScore">
-          {{positie + 1}}
-        </ion-col>
-        <ion-col class="positie" *ngIf="line?.TotalTeamScore === teamstand[positie-1]?.TotalTeamScore">
-
+        <ion-col class="positie">
+          {{line.positie}}
         </ion-col>
         <ion-col>{{line.Participant.Name}}</ion-col>
         <ion-col class="punten"> {{line.TotalTeamScore}}</ion-col>
